--- a/origano/views/include/_formbusiness.ejs
+++ b/origano/views/include/_formbusiness.ejs
@@ -1,4 +1,4 @@
-<form action="/create" method="POST" id="addbusiness" enctype="multipart/form-data">
+<form action="/api/company/all-companies" method="POST" id="addbusiness" enctype="multipart/form-data">
     <div class="card-body ">
         <div class="form-group">
             <div class="filter ">
