--- a/origano/views/updatebusiness.ejs
+++ b/origano/views/updatebusiness.ejs
@@ -25,38 +25,41 @@
                             <!-- /.card-header -->
                             <!-- form start -->
 
-                            <form action="#" method="POST" id="updatebusiness" enctype="multipart/form-data">
+                            <form action="/api/company/update/<%=business._id%>" method="POST" id="updatebusiness" enctype="multipart/form-data">
                                 <div class="card-body ">
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <div class="filter ">
-                                            <a href="/business ">
+                                            <a href="/business">
                                                 <i class="fas fa-angle-double-left "></i>All Business</a>
                                         </div>
                                         <br>
+                                        <div class="form-title text-center ">
+                                            <h2 class="text-dark ">New business</h2>
+                                            <span class="text-dark ">Use the below form to create new business</span>
+                                        </div>
+                                        <label for="email ">Email address</label>
+                                        <input type="email" name="email" value="" class="form-control " id="email" placeholder=" example@gmail.com ">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="companyName ">Company Name</label>
+                                        <input type="text " name="companyName" value="" class="form-control " id="companyName" placeholder="Company Name ">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="ownerName ">Owner Name</label>
+                                        <input type="text " name="ownerName" value="" class="form-control " id="ownerName" placeholder="Owner Name ">
+                                    </div>
 
-                                        <label for="Email ">Email address</label>
-                                        <input type="email" name="email" value="" class="form-control " id="exampleInputEmail1 " placeholder=" example@gmail.com ">
+                                    <div class="form-group">
+                                        <label for="phoneNumber ">Mobile On</label>
+                                        <input type="number" name="phoneNumber" value="" class="form-control " id="phoneNumber" placeholder="Mobile Number">
                                     </div>
                                     <div class="form-group">
-                                        <label for="cname ">Company Name</label>
-                                        <input type="text " name="cname" value="" class="form-control " id="cname" placeholder="Company Name ">
+                                        <label for="tradeLicense ">Trade licence</label>
+                                        <input type="file" name="tradeLicense" value="" class="form-control ">
                                     </div>
                                     <div class="form-group">
-                                        <label for="oname ">Owner Name</label>
-                                        <input type="text " name="oname" value="" class="form-control " id="oname" placeholder="Owner Name ">
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="mobile ">Mobile On</label>
-                                        <input type="number" name="mobile" value="" class="form-control " id="mobile" placeholder="Mobile Number">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="trade ">Trade licence</label>
-                                        <input type="file" name="files" value="" class="form-control ">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="company ">Type of company</label>
-                                        <select name="company" id="company">
+                                        <label for="typeOfCompany ">Type of company</label>
+                                        <select name="typeOfCompany" id="typeOfCompany">
                                             <option value="it">IT</option>
                                             <option value="marketing">Marketing</option>
                                             <option value="business">Business</option>
@@ -64,48 +67,48 @@
                                           </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="card ">PAN Card Number</label>
-                                        <input type="number" name="card" value="" class="form-control " id="card" placeholder="PAN Number">
+                                        <label for="panCardNumber ">PAN Card Number</label>
+                                        <input type="number" name="panCardNumber" value="" class="form-control " id="panCardNumber" placeholder="PAN Number">
                                     </div>
                                     <div class="form-group">
-                                        <label for="panimage ">PAN Card Image</label>
-                                        <input type="file" name="panimage" value="" class="form-control ">
+                                        <label for="panCardImage ">PAN Card Image</label>
+                                        <input type="file" name="panCardImage" value="" class="form-control ">
                                     </div>
                                     <div class="form-group">
-                                        <label for="agreeimage ">Agreement copy Image</label>
-                                        <input type="file" name="agreeimage" value="" class="form-control ">
+                                        <label for="agreementCopy ">Agreement copy Image</label>
+                                        <input type="file" name="agreementCopy" value="" class="form-control ">
                                     </div>
                                     <div class="form-group">
-                                        <label for="location ">Business Location</label>
-                                        <input type="text " name="location" value="" class="form-control " id="location" placeholder="Business location">
+                                        <label for="businessLocation ">Business Location</label>
+                                        <input type="text " name="businessLocation" value="" class="form-control " id="businessLocation" placeholder="Business location">
                                     </div>
                                     <div class="form-group">
-                                        <label for="address ">Business Address</label>
-                                        <input type="text " name="address" value="" class="form-control " id="address" placeholder="Business Address">
+                                        <label for="businessAddress ">Business Address</label>
+                                        <input type="text " name="businessAddress" value="" class="form-control " id="businessAddress" placeholder="Business Address">
                                     </div>
                                     <div class="form-group">
-                                        <label for="employee ">Number of Employees</label>
-                                        <select name="employee" id="employee">
+                                        <label for="noOfEmployees ">Number of Employees</label>
+                                        <select name="noOfEmployees" id="noOfEmployees">
                                             <option value="ten">Less than 10</option>
                                             <option value="thirty">Less than 30</option>
                                             <option value="thirtyplus">More than 30</option>
                                           </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="gst ">GST number</label>
-                                        <input type="number" name="gst" value="" class="form-control " id="gst" placeholder="GST Number">
+                                        <label for="gstNumber ">GST number</label>
+                                        <input type="number" name="gstNumber" value="" class="form-control " id="gstNumber" placeholder="GST Number">
                                     </div>
                                     <div class="form-group">
-                                        <label for="account ">Account number</label>
-                                        <input type="number" name="account" value="" class="form-control " id="account" placeholder="Account Number">
+                                        <label for="accountNumber ">Account number</label>
+                                        <input type="number" name="accountNumber" value="" class="form-control " id="accountNumber" placeholder="Account Number">
                                     </div>
                                     <div class="form-group">
-                                        <label for="code ">ISFC code</label>
-                                        <input type="text" name="code" value="" class="form-control " id="code" placeholder="ISFC code">
+                                        <label for="ifscCode ">ISFC code</label>
+                                        <input type="text" name="ifscCode" value="" class="form-control " id="ifscCode" placeholder="ISFC code">
                                     </div>
                                     <div class="form-group">
-                                        <label for="service ">Types of services</label>
-                                        <select name="service" id="service">
+                                        <label for="typeOfService ">Types of services</label>
+                                        <select name="typeOfService" id="typeOfService">
                                             <option value="italian">Italian Platter</option>
                                             <option value="bengali">Bengali Platter</option>
                                             <option value="diet">Gym Diet</option>
@@ -114,21 +117,8 @@
                                           </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="date ">Established from</label>
-                                        <input type="date" name="date" value="" class="form-control " id="date">
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="status">Status</label>
-                                        <div class="radio inline">
-                                            <input type="radio" name="status" value="Active" id="radio-4">
-                                            <label for="radio-4">Active</label>
-                                        </div>
-
-                                        <div class="radio inline">
-                                            <input type="radio" name="status" value="Inactive" id="radio-5">
-                                            <label for="radio-4">Inactive</label>
-                                        </div>
+                                        <label for="dateOfEstablishment ">Established from</label>
+                                        <input type="date" name="dateOfEstablishment" value="" class="form-control " id="dateOfEstablishment">
                                     </div>
                                 </div>
                                 <!-- /.card-body -->
@@ -136,6 +126,7 @@
                                 <div class="card-footer ">
                                     <button type="submit " id="submit" class=" btn btn-primary ">Submit</button>
                                 </div>
+
                             </form>
 
 
