--- a/views/adminlogin.ejs
+++ b/views/adminlogin.ejs
@@ -28,7 +28,7 @@
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
-                <form action="" method="post">
+                <form action="/api/company/login" method="POST">
                     <div class="input-group mb-3">
                         <input type="number" class="form-control" placeholder="phone number">
                         <div class="input-group-append">
