--- a/views/include/_formFoods.ejs
+++ b/views/include/_formFoods.ejs
@@ -12,44 +12,44 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="name ">Food's Name</label>
-            <input type="text " name="name" value="" class="form-control " id="name" placeholder="Food's Name ">
+            <label for="name">Food's Name</label>
+            <input type="text" name="name" value="" class="form-control" id="name" placeholder="Food's Name">
         </div>
         <div class="form-group">
-            <label for="cuisine ">Type of Cuisine</label>
+            <label for="cuisine">Type of Cuisine</label>
             <select name="cuisine" id="cuisine">
-                <option value="it">IT</option>
-                <option value="marketing">Marketing</option>
-                <option value="business">Business</option>
+                <option value="indian">Indian</option>
+                <option value="chinese">Chinese</option>
+                <option value="italian">Italian</option>
                 
               </select>
         </div>
         <div class="form-group">
-            <label for="price ">Price</label>
-            <input type="number" name="price" value="" class="form-control " id="price" placeholder="Price for thiis food">
+            <label for="price">Price</label>
+            <input type="number" name="price" value="" class="form-control" id="price" placeholder="Price for thiis food">
         </div>
         <div class="form-group">
             <label for="photo ">Food Images</label>
-            <input type="file" name="photo" id="photo" value="" class="form-control ">
+            <input type="file" id="photoFile" value="" class="form-control ">
+            <textarea id="photo" name="photo" hidden></textarea>
         </div>
 
         <div class="form-group">
-            <label for="quantity ">Quantity</label>
-            <input type="text " name="quantity" value="" class="form-control " id="quantity" placeholder="Business location">
+            <label for="quantity">Quantity</label>
+            <input type="text" name="quantity" value="" class="form-control" id="quantity" placeholder="Business location">
         </div>
         <div class="form-group">
-            <label for="description ">Description</label>
-            <input type="text " name="description" value="" class="form-control " id="description" placeholder="Business Address">
+            <label for="description">Description</label>
+            <input type="text" name="description" value="" class="form-control" id="description" placeholder="Business Address">
         </div>
         <div class="form-group">
-            <label for="companyId ">companyId</label>
-            <input type="text " name="companyId" value="" class="form-control " id="companyId" placeholder="Business Address">
+            <input type="text" name="companyId" value="" class="form-control" id="companyId" placeholder="Company Id">
         </div>
     </div>
     <!-- /.card-body -->
 
-    <div class="card-footer ">
-        <button type="submit " id="submit" class=" btn btn-primary ">Submit</button>
+    <div class="card-footer">
+        <button type="submit" id="submit" class=" btn btn-primary">Submit</button>
     </div>
     <!-- /.card-body -->
 
@@ -70,8 +70,8 @@
         }
     }
 
-    document.getElementById("photo").addEventListener("change", function() {
-        encodeImageFileURL("photo", "photo");
+    document.getElementById("photoFile").addEventListener("change", function() {
+        encodeImageFileURL("photoFile", "photo");
     });
 
     document.getElementById("addFood").addEventListener("submit", function(e) {
@@ -82,6 +82,7 @@
         xhr.send(JSON.stringify({
             name: document.getElementById("name").value,
             cuisine: document.getElementById("cuisine").value,
+            price: document.getElementById("price").value,
             photo: document.getElementById("photo").value,
             quantity: document.getElementById("quantity").value,
             description: document.getElementById("description").value,
