--- a/views/include/_showfoods.ejs
+++ b/views/include/_showfoods.ejs
@@ -13,7 +13,7 @@
             <%=food[i].cuisine%>
         </td>
         <td>
-            <%=food[i].photo%>
+            <img src="<%=food[i].photo%>" height="20" width="20" alt="Food"/>
         </td>
         <td>
             <%=food[i].quantity%>
