--- a/views/updateFoodSection.ejs
+++ b/views/updateFoodSection.ejs
@@ -25,7 +25,7 @@
                             <!-- /.card-header -->
                             <!-- form start -->
 
-                            <form action="/api/foods/update/<%=food._id%>" method="POST" id="updateFoodCategory" enctype="multipart/form-data">
+                            <form action="" id="updateFoodCategory">
                                 <div class="card-body ">
                                     <div class="form-group">
                                         <div class="filter ">
@@ -38,14 +38,14 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="name ">Food's Name</label>
-                                        <input type="text " name="name" value="" class="form-control " id="name" placeholder="Food's Name ">
+                                        <input type="text " name="name" value="<%=food.name%>" class="form-control " id="name" placeholder="Food's Name ">
                                     </div>
                                     <div class="form-group">
                                         <label for="cuisine ">Type of Cuisine</label>
                                         <select name="cuisine" id="cuisine">
-                                            <option value="it">IT</option>
-                                            <option value="marketing">Marketing</option>
-                                            <option value="business">Business</option>
+                                            <option value="indian">Indian</option>
+                                            <option value="chinese">Chinese</option>
+                                            <option value="italian">Italian</option>
                                             
                                           </select>
                                     </div>
@@ -55,7 +55,8 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="photo ">Food Images</label>
-                                        <input type="file" name="photo" value="" class="form-control ">
+                                        <input type="file" id="photoFile" value="" class="form-control ">
+                                        <textarea id="photo" name="photo" value="<%=food.photo%>" hidden></textarea>
                                     </div>
 
                                     <div class="form-group">
@@ -87,3 +88,45 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function encodeImageFileURL(uploadedFile, base64Code) {
+            fileSelect = document.getElementById(uploadedFile).files;
+            if (fileSelect.length > 0) {
+                var fileSelect = fileSelect[0];
+                var fileReader = new FileReader();
+                fileReader.onload = function(e) {
+                    var srcData = e.target.result;
+                    document.getElementById(base64Code).innerHTML = srcData;
+                }
+                fileReader.readAsDataURL(fileSelect);
+            }
+        }
+    
+        document.getElementById("photoFile").addEventListener("change", function() {
+            encodeImageFileURL("photoFile", "photo");
+        });
+    
+        document.getElementById("updateFoodCategory").addEventListener("submit", function(e) {
+            e.preventDefault();
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "/api/foods/update/<%=food._id%>", true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.send(JSON.stringify({
+                name: document.getElementById("name").value,
+                cuisine: document.getElementById("cuisine").value,
+                price: document.getElementById("price").value,
+                photo: document.getElementById("photo").value,
+                quantity: document.getElementById("quantity").value,
+                description: document.getElementById("description").value,
+                companyId: document.getElementById("companyId").value,
+            }));
+            xhr.onload = function() {
+                if (xhr.status != 200) {
+                    alert(JSON.parse(xhr.response).error);
+                } else {
+                    alert(JSON.parse(xhr.response).success);
+                }
+            };
+        });
+    </script>
