--- a/views/business.ejs
+++ b/views/business.ejs
@@ -3,7 +3,6 @@
 <%-include('include/_header')%>
     <!-- //include header -->
 
-
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
@@ -47,12 +46,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-
-
-
-
-
-
+                                        <%-include('include/_showbusiness')%>
                                     </tbody>
 
                                 </table>
@@ -111,7 +105,18 @@
     <!-- AdminLTE for demo purposes -->
     <script src="js/demo.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-
+    <script>
+        $(document).ready(function() {
+            const admin = JSON.parse(localStorage.getItem('admin'));
+            if (!admin) {
+                window.location.replace("http://localhost:3000/adminlogin");
+            } else {
+                if (admin.role == "company") {
+                    window.location.replace("http://localhost:3000/orders?id=" + admin._id);
+                }
+            }
+        });
+    </script>
     </body>
 
     </html>
