--- a/views/include/_formFoods.ejs
+++ b/views/include/_formFoods.ejs
@@ -18,6 +18,7 @@
         <div class="form-group">
             <label for="cuisine">Type of Cuisine</label>
             <select name="cuisine" id="cuisine">
+                <option value="cuisine">--Select Cuisine Type--</option>
                 <option value="indian">Indian</option>
                 <option value="chinese">Chinese</option>
                 <option value="italian">Italian</option>
@@ -25,8 +26,18 @@
               </select>
         </div>
         <div class="form-group">
+            <label for="category">Food Category</label>
+            <select name="category" id="category">
+                <option value="category">--Select Category--</option>
+                <option value="main">Main course</option>
+                <option value="starter">Starter</option>
+                <option value="desert">Desert</option>
+                
+              </select>
+        </div>
+        <div class="form-group">
             <label for="price">Price</label>
-            <input type="number" name="price" value="" class="form-control" id="price" placeholder="Price for thiis food">
+            <input type="number" name="price" value="" class="form-control" id="price" placeholder="Price for this food">
         </div>
         <div class="form-group">
             <label for="photo ">Food Images</label>
@@ -42,9 +53,6 @@
             <label for="description">Description</label>
             <input type="text" name="description" value="" class="form-control" id="description" placeholder="Business Address">
         </div>
-        <div class="form-group">
-            <input type="text" name="companyId" value="" class="form-control" id="companyId" placeholder="Company Id">
-        </div>
     </div>
     <!-- /.card-body -->
 
@@ -53,10 +61,14 @@
     </div>
     <!-- /.card-body -->
 
-
 </form>
 
 <script>
+    const admin = JSON.parse(localStorage.getItem('admin'));
+    if (!admin) {
+        window.location.replace("http://localhost:3000/adminlogin");
+    }
+
     function encodeImageFileURL(uploadedFile, base64Code) {
         fileSelect = document.getElementById(uploadedFile).files;
         if (fileSelect.length > 0) {
@@ -76,23 +88,25 @@
 
     document.getElementById("addFood").addEventListener("submit", function(e) {
         e.preventDefault();
+        const admin = JSON.parse(localStorage.getItem('admin'));
         var xhr = new XMLHttpRequest();
         xhr.open("POST", "/api/foods/create", true);
         xhr.setRequestHeader('Content-Type', 'application/json');
         xhr.send(JSON.stringify({
             name: document.getElementById("name").value,
             cuisine: document.getElementById("cuisine").value,
+            category: document.getElementById("category").value,
             price: document.getElementById("price").value,
             photo: document.getElementById("photo").value,
             quantity: document.getElementById("quantity").value,
             description: document.getElementById("description").value,
-            companyId: document.getElementById("companyId").value,
+            companyId: admin._id
         }));
         xhr.onload = function() {
-            if (xhr.status != 200) {
+            if (xhr.status != 201) {
                 alert(JSON.parse(xhr.response).error);
             } else {
-                alert(JSON.parse(xhr.response).success);
+                window.location.replace("http://localhost:3000/foodsection?id=" + admin._id);
             }
         };
     });
