--- a/views/include/_show.ejs
+++ b/views/include/_show.ejs
@@ -39,3 +39,10 @@
     </tr>
 
     <%}%>
+
+        <script>
+            const admin = JSON.parse(localStorage.getItem('admin'));
+            if (!admin) {
+                window.location.replace("http://localhost:3000/adminlogin");
+            }
+        </script>
