--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -3,25 +3,65 @@
 <%-include('include/_header')%>
     <!-- //include header -->
 
+
+    <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <div class="content-header">
             <div class="container-fluid">
                 <div class="row mb-2">
-                    <div class="col-sm-8">
-                        <!-- /.card-header -->
-                        <!-- form start -->
+                    <div class="col-sm-12">
+                        <!-- <h1 class="m-0 text-dark">Dashboard</h1> -->
+                        <main id="site-main">
+                            <div class="container">
+                                <div class="box-nav d-flex justify-between">
 
+                                </div>
+                            </div>
+                            <br>
 
-                        <%-include('include/_formprovider')%>
+                            <!-- form handdling -->
+                            <form action="/orders" method="POST">
+                                <table class="table">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Food Name</th>
+                                            <th>User Name</th>
+                                            <th>Quantity</th>
+                                            <th>Total Amount</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
 
+                                        <%-include('include/_showorders')%>
+
+                                    </tbody>
+
+                                </table>
+                            </form>
+
+                        </main>
 
                     </div>
+
                 </div>
+                <!-- /.row -->
             </div>
+            <!-- /.container-fluid -->
         </div>
+
     </div>
+    <!-- /.content-wrapper -->
+
+
+
+    </div>
+    <!-- ./wrapper -->
+
+    <!-- jQuery -->
     <script src="plugins/jquery/jquery.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
     <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
@@ -54,15 +94,14 @@
     <!-- AdminLTE for demo purposes -->
     <script src="js/demo.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+    <script src="/js/provider.js"></script>
     <script>
-        $(document).ready(function() {
-            const admin = JSON.parse(localStorage.getItem('admin'));
-            if (!admin) {
-                window.location.replace("http://localhost:3000/adminlogin");
-            } else {
-                if (admin.role == "company") {
-                    window.location.replace("http://localhost:3000/orders?id=" + admin._id);
-                }
-            }
-        });
+        const admin = JSON.parse(localStorage.getItem('admin'));
+        if (!admin) {
+            window.location.replace("http://localhost:3000/adminlogin");
+        }
+    
     </script>
+    </body>
+
+    </html>
