--- a/views/provider.ejs
+++ b/views/provider.ejs
@@ -103,6 +103,18 @@
     <script src="js/demo.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
     <script src="/js/provider.js"></script>
+    <script>
+        $(document).ready(function() {
+            const admin = JSON.parse(localStorage.getItem('admin'));
+            if (!admin) {
+                window.location.replace("http://localhost:3000/adminlogin");
+            } else {
+                if (admin.role == "company") {
+                    window.location.replace("http://localhost:3000/orders?id=" + admin._id);
+                }
+            }
+        });
+    </script>
     </body>
 
     </html>
