--- a/views/updatebusiness.ejs
+++ b/views/updatebusiness.ejs
@@ -33,33 +33,30 @@
                                                 <i class="fas fa-angle-double-left "></i>All Business</a>
                                         </div>
                                         <br>
-                                        <div class="form-title text-center ">
-                                            <h2 class="text-dark ">New business</h2>
-                                            <span class="text-dark ">Use the below form to create new business</span>
-                                        </div>
                                         <label for="email ">Email address</label>
-                                        <input type="email" name="email" value="" class="form-control " id="email" placeholder=" example@gmail.com ">
+                                        <input type="email" name="email" value="<%=business.email%>" class="form-control " id="email" placeholder=" example@gmail.com ">
                                     </div>
                                     <div class="form-group">
                                         <label for="companyName ">Company Name</label>
-                                        <input type="text " name="companyName" value="" class="form-control " id="companyName" placeholder="Company Name ">
+                                        <input type="text " name="companyName" value="<%=business.companyName%>" class="form-control " id="companyName" placeholder="Company Name ">
                                     </div>
                                     <div class="form-group">
                                         <label for="ownerName ">Owner Name</label>
-                                        <input type="text " name="ownerName" value="" class="form-control " id="ownerName" placeholder="Owner Name ">
+                                        <input type="text " name="ownerName" value="<%=business.ownerName%>" class="form-control " id="ownerName" placeholder="Owner Name ">
                                     </div>
 
                                     <div class="form-group">
                                         <label for="phoneNumber ">Mobile On</label>
-                                        <input type="number" name="phoneNumber" value="" class="form-control " id="phoneNumber" placeholder="Mobile Number">
+                                        <input type="number" name="phoneNumber" value="<%=business.phoneNumber%>" class="form-control " id="phoneNumber" placeholder="Mobile Number">
                                     </div>
                                     <div class="form-group">
                                         <label for="tradeLicense ">Trade licence</label>
-                                        <input type="file" name="tradeLicense" value="" class="form-control ">
+                                        <input type="file" name="tradeLicense" value="<%=business.tradeLicense%>" class="form-control ">
                                     </div>
                                     <div class="form-group">
                                         <label for="typeOfCompany ">Type of company</label>
-                                        <select name="typeOfCompany" id="typeOfCompany">
+                                        <select name="typeOfCompany" id="typeOfCompany" value="<%=business.typeOfCompany%>">
+                                            <option value="selectcompany">--Select Company Type--</option>
                                             <option value="it">IT</option>
                                             <option value="marketing">Marketing</option>
                                             <option value="business">Business</option>
@@ -68,27 +65,28 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="panCardNumber ">PAN Card Number</label>
-                                        <input type="number" name="panCardNumber" value="" class="form-control " id="panCardNumber" placeholder="PAN Number">
+                                        <input type="number" name="panCardNumber" value="<%=business.panCardNumber%>" class="form-control " id="panCardNumber" placeholder="PAN Number">
                                     </div>
                                     <div class="form-group">
                                         <label for="panCardImage ">PAN Card Image</label>
-                                        <input type="file" name="panCardImage" value="" class="form-control ">
+                                        <input type="file" name="panCardImage" value="<%=business.panCardImage%>" class="form-control ">
                                     </div>
                                     <div class="form-group">
                                         <label for="agreementCopy ">Agreement copy Image</label>
-                                        <input type="file" name="agreementCopy" value="" class="form-control ">
+                                        <input type="file" name="agreementCopy" value="<%=business.agreementCopy%>" class="form-control ">
                                     </div>
                                     <div class="form-group">
                                         <label for="businessLocation ">Business Location</label>
-                                        <input type="text " name="businessLocation" value="" class="form-control " id="businessLocation" placeholder="Business location">
+                                        <input type="text " name="businessLocation" value="<%=business.businessLocation%>" class="form-control " id="businessLocation" placeholder="Business location">
                                     </div>
                                     <div class="form-group">
                                         <label for="businessAddress ">Business Address</label>
-                                        <input type="text " name="businessAddress" value="" class="form-control " id="businessAddress" placeholder="Business Address">
+                                        <input type="text " name="businessAddress" value="<%=business.businessAddress%>" class="form-control " id="businessAddress" placeholder="Business Address">
                                     </div>
                                     <div class="form-group">
                                         <label for="noOfEmployees ">Number of Employees</label>
-                                        <select name="noOfEmployees" id="noOfEmployees">
+                                        <select name="noOfEmployees" id="noOfEmployees" value="<%=business.noOfEmployees%>">
+                                            <option value="selectemployee">--Select Employee Number--</option>
                                             <option value="ten">Less than 10</option>
                                             <option value="thirty">Less than 30</option>
                                             <option value="thirtyplus">More than 30</option>
@@ -96,19 +94,20 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="gstNumber ">GST number</label>
-                                        <input type="number" name="gstNumber" value="" class="form-control " id="gstNumber" placeholder="GST Number">
+                                        <input type="number" name="gstNumber" value="<%=business.gstNumber%>" class="form-control " id="gstNumber" placeholder="GST Number">
                                     </div>
                                     <div class="form-group">
                                         <label for="accountNumber ">Account number</label>
-                                        <input type="number" name="accountNumber" value="" class="form-control " id="accountNumber" placeholder="Account Number">
+                                        <input type="number" name="accountNumber" value="<%=business.accountNumber%>" class="form-control " id="accountNumber" placeholder="Account Number">
                                     </div>
                                     <div class="form-group">
                                         <label for="ifscCode ">ISFC code</label>
-                                        <input type="text" name="ifscCode" value="" class="form-control " id="ifscCode" placeholder="ISFC code">
+                                        <input type="text" name="ifscCode" value="<%=business.ifscCode%>" class="form-control " id="ifscCode" placeholder="ISFC code">
                                     </div>
                                     <div class="form-group">
                                         <label for="typeOfService ">Types of services</label>
-                                        <select name="typeOfService" id="typeOfService">
+                                        <select name="typeOfService" id="typeOfService" value="<%=business.typeOfService%>">
+                                            <option value="select">--Select Service Type--</option>
                                             <option value="italian">Italian Platter</option>
                                             <option value="bengali">Bengali Platter</option>
                                             <option value="diet">Gym Diet</option>
@@ -118,7 +117,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="dateOfEstablishment ">Established from</label>
-                                        <input type="date" name="dateOfEstablishment" value="" class="form-control " id="dateOfEstablishment">
+                                        <input type="date" name="dateOfEstablishment" value="<%=business.dateOfEstablishment%>" class="form-control " id="dateOfEstablishment">
                                     </div>
                                 </div>
                                 <!-- /.card-body -->
@@ -129,11 +128,73 @@
 
                             </form>
 
-
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        function encodeImageFileURL(uploadedFile, base64Code) {
+            fileSelect = document.getElementById(uploadedFile).files;
+            if (fileSelect.length > 0) {
+                var fileSelect = fileSelect[0];
+                var fileReader = new FileReader();
+                fileReader.onload = function(e) {
+                    var srcData = e.target.result;
+                    document.getElementById(base64Code).innerHTML = srcData;
+                }
+                fileReader.readAsDataURL(fileSelect);
+            }
+        }
+
+        document.getElementById("tradeLicenseImg").addEventListener("change", function() {
+            encodeImageFileURL("tradeLicenseImg", "tradeLicense");
+        });
+
+        document.getElementById("panCardImage").addEventListener("change", function() {
+            encodeImageFileURL("panCardImage", "panCardImageCode");
+        });
+
+        document.getElementById("agreementCopyImg").addEventListener("change", function() {
+            encodeImageFileURL("agreementCopyImg", "agreementCopy");
+        });
+
+        document.getElementById("updatebusiness").addEventListener("submit", function(e) {
+            e.preventDefault();
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "/api/company/update/<%=business._id%>", true);
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.send(JSON.stringify({
+                companyName: document.getElementById("companyName").value,
+                ownerName: document.getElementById("ownerName").value,
+                email: document.getElementById("email").value,
+                phoneNumber: document.getElementById("phoneNumber").value,
+                tradeLicense: document.getElementById("tradeLicense").value,
+                typeOfCompany: document.getElementById("typeOfCompany").value,
+                panCardNumber: document.getElementById("panCardNumber").value,
+                panCardImage: document.getElementById("panCardImageCode").value,
+                agreementCopy: document.getElementById("agreementCopy").value,
+                businessLocation: document.getElementById("businessLocation").value,
+                businessAddress: document.getElementById("businessAddress").value,
+                noOfEmployees: document.getElementById("noOfEmployees").value,
+                gstNumber: document.getElementById("gstNumber").value,
+                accountNumber: document.getElementById("accountNumber").value,
+                ifscCode: document.getElementById("ifscCode").value,
+                typeOfService: document.getElementById("typeOfService").value,
+                dateOfEstablishment: document.getElementById("dateOfEstablishment").value
+            }));
+            xhr.onload = function() {
+                if (xhr.status != 200) {
+                    alert(JSON.parse(xhr.response).error);
+                } else {
+                    alert(JSON.parse(xhr.response).success);
+                }
+            };
+        });
+
+        const admin = JSON.parse(localStorage.getItem('admin'));
+        if (!admin) {
+            window.location.replace("http://localhost:3000/adminlogin");
+        }
+    </script>
