--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -33,18 +33,6 @@
             <label for="wallet ">Wallet amount</label>
             <input type="number" name="amount" value="" class="form-control " id="amount" placeholder="Wallet Amount">
         </div>
-        <!-- <div class="form-group">
-            <label for="gender ">Gender</label>
-            <div class="radio inline ">
-                <input type="radio" name="gender" value="Male " id="radio-2 ">
-                <label for="radio-2 ">Male</label>
-            </div>
-            <div class="radio inline ">
-                <input type="radio " name="gender" value="Female " id="radio-3 ">
-                <label for="radio-3 ">Female</label>
-            </div>
-        </div> -->
-
         <div class="form-group">
             <label for="gender">Status</label>
             <div class="radio inline">
@@ -58,7 +46,6 @@
                     <label for="radio-4">Active</label>
                 </div>
 
-
             </div>
             <!-- /.card-body -->
 
@@ -69,6 +56,6 @@
 <script>
     const admin = JSON.parse(localStorage.getItem('admin'));
     if (!admin) {
-        window.location.replace("http://localhost:3000/adminlogin");
+        window.location.replace("https://origano-admin.herokuapp.com/adminlogin");
     }
 </script>
