--- a/views/include/_showbusiness.ejs
+++ b/views/include/_showbusiness.ejs
@@ -1,7 +1,5 @@
 <%for(var i=0; i < business.length;i++){%>
 
-
-
     <tr>
         <td>
             <%=i+1%>
@@ -65,6 +63,6 @@
         <script>
             const admin = JSON.parse(localStorage.getItem('admin'));
             if (!admin) {
-                window.location.replace("http://localhost:3000/adminlogin");
+                window.location.replace("https://origano-admin.herokuapp.com/adminlogin");
             }
         </script>
