--- a/views/include/_showprovider.ejs
+++ b/views/include/_showprovider.ejs
@@ -42,6 +42,6 @@
         <script>
             const admin = JSON.parse(localStorage.getItem('admin'));
             if (!admin) {
-                window.location.replace("http://localhost:3000/adminlogin");
+                window.location.replace("https://origano-admin.herokuapp.com/adminlogin");
             }
         </script>
