--- a/views/updatebusiness.ejs
+++ b/views/updatebusiness.ejs
@@ -195,6 +195,6 @@
 
         const admin = JSON.parse(localStorage.getItem('admin'));
         if (!admin) {
-            window.location.replace("http://localhost:3000/adminlogin");
+            window.location.replace("https://origano-admin.herokuapp.com/adminlogin");
         }
     </script>
