oregano first phase

--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -42,8 +42,8 @@
             <div class="form-group">
                 <label for="gender">Status</label>
                 <div class="radio inline">
-                    <input type="radio" name="status" value="Active" id="radio-4">
-                    <label for="radio-4">Active</label>
+                    <input type="radio" name="status" value="Active" id="radio-5">
+                    <label for="radio-4">InActive</label>
                 </div>
 
             </div>
